welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:7: error: ')' expected but integer literal found.
    else if (nums(i) < max1 && nums(i) > max 2) {max2 = nums(i)}
                                             ^max2Value:8: error: illegal start of simple expression
  }
  ^